Add cute little github icon

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,9 @@
             <a class="icon home-icon" href="/" title="Go to homepage">Home</a>
           </li>
           <li>
+            <a class="icon github-icon" href="https://github.com/mre" title="My Github profile">Github</a>
+          </li>
+          <li>
             <a class="icon twitter-icon" href="https://twitter.com/matthiasendler"
               title="My Twitter profile">Twitter</a>
           </li>
