--- a/templates/snippets/logo.html
+++ b/templates/snippets/logo.html
@@ -1,6 +1,3 @@
-{% set data = load_data(path="static/logo.svg") %}
-<div class="logo">
-    <a href="/">
-        {{ data | safe }}
-    </a>
-</div>
+<a href="/">
+  <div class="logo"></div>
+</a>
