Add box shadow to search box

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -326,6 +326,7 @@ footer .field {
   border-radius: 20px;
   width: 150px;
   font-size: 0.9em;
+  box-shadow: 0 1px 0px rgba(255,255,255,0.25);
 }
 
 input[type="submit"] {
