--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
       {% endif %}
       {% endblock content %}
     </main>
-    <img alt="Page view statistics" src="https://ping.endler.dev/x.gif" />
+    <img alt="Page view statistics" style="display:none" src="https://ping.endler.dev/x.gif" />
   </div>
   {% block teaser %}
   {% endblock teaser %}
