--- a/templates/snippets/logo.html
+++ b/templates/snippets/logo.html
@@ -1,3 +1,9 @@
+{% set logo_light = load_data(path="static/logo_light.svg") %}
+{% set logo_dark = load_data(path="static/logo_dark.svg") %}
+
 <a href="/">
-  <div class="logo"></div>
+  <div class="logo">
+    {{ logo_light | safe }}
+    {{ logo_dark | safe }}
+  </div>
 </a>
