--- a/templates/index.html
+++ b/templates/index.html
@@ -35,24 +35,7 @@
         Writes about Rust, low-level computing, and microwave clocks.
         <a href="/about">About me.</a>
       </p>
-      <nav>
-        <ul>
-          <li>
-            <a class="icon home-icon" href="/" title="Go to homepage">Home</a>
-          </li>
-          <li>
-            <a class="icon github-icon" href="https://github.com/mre" title="My Github profile">Github</a>
-          </li>
-          <li>
-            <a class="icon twitter-icon" href="https://twitter.com/matthiasendler"
-              title="My Twitter profile">Twitter</a>
-          </li>
-          <li>
-            <a class="icon rss-icon" href="https://feedly.com/i/subscription/feed/https://endler.dev/rss.xml"
-              title="My RSS feed">RSS</a>
-          </li>
-        </ul>
-      </nav>
+      {% include "snippets/nav.html" %}
       {% include "snippets/search.html" %}
     </header>
 
