--- a/templates/snippets/logo.html
+++ b/templates/snippets/logo.html
@@ -2,7 +2,7 @@
 {% set logo_dark = load_data(path="static/logo_dark.svg") %}
 
 <a href="/" aria-label="Go back to homepage">
-  <div class="logo">
+  <div style="position: relative; width: 175px; height: 153px; margin: auto;">
     {{ logo_light | safe }}
     {{ logo_dark | safe }}
   </div>
