--- a/templates/talks.html
+++ b/templates/talks.html
@@ -26,7 +26,7 @@
         {% if link %}
         <a href="{{ link }}">
         {% endif %}
-            <img style="width:100%;" src="{{ talk.image }}" />
+            <img alt="Me speaking at {{ talk.event }} in {{ talk.date }}" style="width:100%;" src="{{ talk.image }}" />
         {% if link %}
         </a>
         {% endif %}
