Fix canonical link

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   {%- if config.extra.id %}
   <link rel="dns-prefetch" href="//www.google-analytics.com/" />
   {%- endif %}
-  <link rel="canonical" href="{{ config.base_url | safe }}">
+  <link rel="canonical" href="{{ current_url | safe }}">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=m2llJQPQq8">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=m2llJQPQq8">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=m2llJQPQq8">
