Add edit button for articles

--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -21,7 +21,7 @@
 {% endmacro nicedate %}
 
 {% macro comments(comments) %}
-💬 Comments available on
+💬 Comments on
 {% for comment in comments %}
 <a href="{{ comment.url }}">{{ comment.name }}</a>
 {%- if not loop.last %},{% else %}.{% endif %}
