--- a/templates/page.html
+++ b/templates/page.html
@@ -18,7 +18,7 @@
   {% endif %}
   {{ page.content | safe }}
 
-  <ul style="list-style: none; padding: 24px 0 0 0; margin-top: 40px; border-top: solid 1px white;">
+  <ul class='post-links'>
     <li>
     💡Found an error in this article? Please <a href="https://github.com/mre/mre.github.io/edit/source/content/{{ page.path }}index.md">propose a change</a> on Github.
     </li>
