--- a/sass/main.scss
+++ b/sass/main.scss
@@ -361,22 +361,13 @@ input:focus::placeholder {
   }
 }
 
-.tldr {
-  padding: 65px 20px 20px 20px;
+.info {
+  padding: 20px;
   margin: 30px 0;
   background-color: lightyellow;
   border: 4px solid peachpuff;
   position: relative;
-}
-
-.tldr:after {
-  content: "Summary";
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 1.3em;
-  color: grey;
-  padding: 15px 20px;
+  border-radius: 6px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -435,7 +426,7 @@ input:focus::placeholder {
     filter: invert(100%);
   }
 
-  .tldr {
+  .info {
     background: $blue-800;
     border-color: $grey-400;
   }
