--- a/templates/snippets/search.html
+++ b/templates/snippets/search.html
@@ -1,17 +1,6 @@
 {% set search_min = load_data(path="static/search_min.js") %}
 <script defer type="module">{{ search_min | safe }}</script>
-<script defer>
-    document.addEventListener("DOMContentLoaded", function (event) {
-        let inputBox = document.getElementById('tinysearch');
-        inputBox.onfocus = function () {
-            inputBox.scrollIntoView({
-                block: 'start',
-                behavior: 'smooth'
-            });
-        }
-    });
-</script>
-<form autocomplete="off">
+<form id="searchbox" autocomplete="off">
     <div class="autocomplete">
         <input id="tinysearch" type="text" aria-label="Search through articles" placeholder="&#x1F50D; Search">
         </label>
