--- a/templates/snippets/logo.html
+++ b/templates/snippets/logo.html
@@ -2,11 +2,12 @@
 {% set logo_font_light = load_data(path="static/logo_font_light.svg") %}
 {% set logo_font_dark = load_data(path="static/logo_font_dark.svg") %}
 
-  <a href="/" aria-label="Go back to homepage">
-    <div style="width: 110px; margin: auto;">
-      {{ logo | safe }}
-    </div>
-    <div style="width: 175px; margin: 10px auto 0px auto;">
-      {{ logo_font_light | safe }} {{ logo_font_dark | safe }}
-    </div>
-  </a>
+<a href="/" aria-label="Go back to homepage">
+  <div style="width: 110px; margin: auto;">
+    {{ logo | safe }}
+  </div>
+  <div class="logo_font">
+    <div>{{ logo_font_light | safe }}</div>
+    <div>{{ logo_font_dark | safe }} </div>
+  </div>
+</a>
