Fix logo. Cleanup.

--- a/templates/snippets/logo.html
+++ b/templates/snippets/logo.html
@@ -7,7 +7,7 @@
     {{ logo | safe }}
   </div>
   <div class="logo_font">
-    <div>{{ logo_font_light | safe }}</div>
-    <div>{{ logo_font_dark | safe }} </div>
+    {{ logo_font_dark | safe }}
+    {{ logo_font_light | safe }}
   </div>
 </a>
