--- a/templates/page.html
+++ b/templates/page.html
@@ -20,7 +20,7 @@
 
   <ul class='post-links'>
     <li>
-    💡Found an error in this article? Please <a href="https://github.com/mre/mre.github.io/edit/source/content/{{ page.path }}index.md">propose a change</a> on Github.
+    💡Found an error? Please <a href="https://github.com/mre/mre.github.io/edit/source/content/{{ page.path }}index.md">propose a change</a> on Github.
     </li>
     {% if page.extra.comments %}
     <li>
