Add sponsoring section

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -14,10 +14,26 @@
                 It'll be great.<br />
             </p>
         </div>
+
+
+        <div>
+            <h2><a href="https://github.com/sponsors/mre/">Support</a></h2>
+            <p>
+                Creating and maintaining this blog and my projects is a lot of
+                work. By supporting me, you allow me to invest more time in new
+                content, new features, and continuous maintenance. The best way
+                to support me is to <a href="https://github.com/sponsors/mre/">sponsor me on GitHub</a>.
+                GitHub will even match sponsorships until October 2020!
+                Alternatively, I also have <a
+                href="https://www.patreon.com/hellorust">Patreon</a> account. Thank you! ❤️
+            </p>
+        </div>
+
+
         <div>
             <form action="https://tinyletter.com/mre" method="post" target="popupwindow"
                 onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true">
-                <p><label for="tlemail">Wow! I have a newsletter for new articles:</label></p>
+                <p><label for="tlemail">Wow! I also have a newsletter for new articles:</label></p>
                 <p>
                     <input class="field email" type="email" name="email" id="tlemail" placeholder="E-Mail Address" />
                     <input type="hidden" value="1" name="embed" /><input class="field submit" type="submit"
