Fix logo on Chrome mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -401,6 +401,12 @@ input:focus::placeholder {
   margin: 0 auto;
 }
 
+.logo_font svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 @media (prefers-color-scheme: light) {
   .logo_font_dark {
     display: none;
