--- a/templates/snippets/logo.html
+++ b/templates/snippets/logo.html
@@ -7,7 +7,11 @@
     {{ logo | safe }}
   </div>
   <div class="logo_font">
+    <div class="logo_font_dark">
     {{ logo_font_dark | safe }}
+    </div>
+    <div class="logo_font_light">
     {{ logo_font_light | safe }}
+    </div>
   </div>
 </a>
