--- a/templates/shortcodes/figure.html
+++ b/templates/shortcodes/figure.html
@@ -3,7 +3,9 @@
     <a href="{{ link }}">
         {% endif %}
 
-        <img src="{{ src }}" {% if alt %} alt="{{ alt }}" {% endif %} />
+        <img src="{{ src }}" {% if alt %} alt="{{ alt }}" {% endif %}
+        {% if width %} width="{{ width }}" {% endif %} {% if height %} height ="{{ height }}" {% endif %} 
+        />
 
         {% if link %}
     </a>
