Add support for start time in embed code

--- a/sass/video.scss
+++ b/sass/video.scss
@@ -1,6 +1,7 @@
 /* Adapted from 
-   Light YouTube Embeds by @labnol 
-   http://labnol.org/?p=27941 */
+ *  Light YouTube Embeds by @labnol 
+ *  https://www.labnol.org/internet/light-youtube-embeds/27941/
+ */
 
 .light-video-embed {
   position: relative;
