Remove old dns prefetch for Google Analytics, which is not used anymore

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,7 @@
     </style>
     {%- block header %}
     <title>Matthias Endler</title>
-    {%- endblock header %} {%- if config.extra.id %}
-    <link rel="dns-prefetch" href="//www.google-analytics.com/" />
-    {%- endif %}
+    {%- endblock header %}
     <link rel="canonical" href="{{ current_url | safe }}" />
     <link
       rel="apple-touch-icon"
