Lazy-load images by default
This is supported in Firefox and Chrome now with
Safari working on it.
https://caniuse.com/#feat=loading-lazy-attr

--- a/templates/shortcodes/figure.html
+++ b/templates/shortcodes/figure.html
@@ -4,6 +4,7 @@
         {% endif %}
 
         <img src="{{ src }}" 
+        loading="lazy"
         {% if alt %}
             alt="{{ alt }}"
         {% elif caption %}
