--- a/templates/shortcodes/video.html
+++ b/templates/shortcodes/video.html
@@ -7,7 +7,7 @@
     data-start="{{start}}"
   {% endif %}
 >
-  <img src="{{preview}}" />
+  <img src="{{preview}}" loading="lazy" />
   <div class="play"></div>
 </div>
 
