--- a/templates/snippets/logo.html
+++ b/templates/snippets/logo.html
@@ -3,7 +3,9 @@
 {% set logo_font_dark = load_data(path="static/logo_font_dark.svg") %}
 
 <a href="/" aria-label="Go back to homepage">
-  <div style="width: 110px; margin: auto;">
+  {# The logo class allows overwriting the image if needed #}
+  {# Inlining the width and margin here to avoid flashing content on render #}
+  <div class="logo" style="width: 110px; margin: auto;">
     {{ logo | safe }}
   </div>
   <div class="logo_font">
