--- a/templates/shortcodes/figure.html
+++ b/templates/shortcodes/figure.html
@@ -3,6 +3,11 @@
     <a href="{{ link }}">
         {% endif %}
 
+        {# The decoder for WebP does not support the format features ALPH #}
+        {% set meta_path = page.path~src %}
+        {% if not meta_path is ending_with(".webp") %}
+            {% set meta = get_image_metadata(path=meta_path) %}
+        {% endif %}
         <img src="{{ src }}" 
         loading="lazy"
         {% if alt %}
@@ -12,7 +17,16 @@
         {% elif credits %}
             alt="{{ credits | markdown(inline=true) | safe }}"
         {% endif %}
-        {% if width %} width="{{ width }}" {% endif %} {% if height %} height ="{{ height }}" {% endif %} 
+        {% if width %}
+            width="{{ width }}"
+        {% elif meta.width %}
+            width="{{ meta.width }}"
+        {% endif %}
+        {% if height %}
+            height ="{{ height }}"
+        {% elif meta.height %}
+            height="{{ meta.height }}"
+        {% endif %} 
         />
 
         {% if link %}
