--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,3 @@
-$black: #111;
-
 $pink-200: #f5b2c8;
 $pink-400: #c35;
 $pink-500: #ff1c76;
@@ -44,7 +42,7 @@ body {
   font-size: 120%;
   line-height: 1.58;
   border-top: 0.5em solid $pink-400;
-  color: $black;
+  color: $grey-500;
 }
 
 .container {
@@ -151,8 +149,6 @@ caption {
 }
 
 code {
-  background: $grey-200;
-  border-radius: 6px;
   display: inline-block;
   font-family: $monospace;
   -moz-font-feature-settings: "liga" off;
@@ -165,6 +161,12 @@ code {
   padding: 0 5px;
   vertical-align: middle;
   word-wrap: normal;
+}
+
+:not(pre) > code {
+  color: $grey-500;
+  background: $grey-200;
+  border-radius: 6px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
 }
 
@@ -460,12 +462,7 @@ input:focus::placeholder {
     border-radius: 6px;
   }
 
-  code {
-    background-color: $grey-500;
-  }
-
-  pre {
-    background-color: #fff;
+  pre, code {
     -webkit-filter: invert(100%);
     filter: invert(100%);
   }
