--- a/templates/page.html
+++ b/templates/page.html
@@ -18,10 +18,8 @@
   {% endif %}
   {{ page.content | safe }}
 
+  <hr/>
   <ul class='post-links'>
-    <li>
-    💡Found an error? Please <a href="https://github.com/mre/mre.github.io/edit/source/content/{{ page.path }}index.md">propose a change</a> on Github.
-    </li>
     {% if page.extra.comments %}
     <li>
       {{ macros::comments(comments=page.extra.comments) }}
@@ -33,6 +31,14 @@
     </li>
     {% endif %}
   </ul>
+  <form action="https://tinyletter.com/mre" method="post" target="popupwindow"
+      onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true">
+      <p>
+          <input class="field email" type="email" name="email" id="tlemail" placeholder="E-Mail Address" />
+          <input type="hidden" value="1" name="embed" /><input class="field submit" type="submit"
+              value="Subscribe" />
+      </p>
+  </form>
 </article>
 {% endblock content %}
 
