Move more links to HTTPS

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -3,7 +3,7 @@
         <div>
             <h2><a href="/about">About me</a></h2>
             <p>
-                I'm a Backend Engineer running <i><a href="http://hello-rust.show/">Hello, Rust!</a></i>, a YouTube
+                I'm a Backend Engineer running <i><a href="https://hello-rust.show/">Hello, Rust!</a></i>, a YouTube
                 channel about the Rust
                 programming language.
                 On this blog, you'll mostly find articles about programming in
