--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,7 +38,8 @@ body {
 }
 
 body {
-  font-family: "Book Antiqua", "Palatino Linotype", Palatino, "EB Garamond", serif;
+  font-family: "Book Antiqua", "Palatino Linotype", Palatino, "EB Garamond",
+    serif;
   font-size: 1.2em;
   line-height: 1.58;
   border-top: 0.5em solid $pink-400;
@@ -298,10 +299,6 @@ footer .body {
   padding: 20px;
 }
 
-.email {
-  background-color: white;
-}
-
 .submit {
   background-color: $grey-300;
 }
@@ -310,6 +307,7 @@ footer .body {
   padding: 10px;
   font-size: 0.8em;
   border: none;
+  border: 1px solid $grey-300;
 }
 
 .autocomplete {
